# trade.pnl.green

./: .env  .gitignore  COMMENTING_STATUS.md  LOCAL_SETUP.md  README.md  package-lock.json  package.json  start-local.sh  stop-local.sh
.github/workflows/: deploy.yml
backend/: COMMENTING_PLAN.md  Cargo.toml  README.md  api.md  compose.yml
backend/src/: config.rs  error.rs  lib.rs  main.rs  prelude.rs
backend/src/api/: ccxt.rs  hyperliquid.rs  hyperliquid_public.rs  mod.rs  not_found.rs  status.rs
backend/src/log/: mod.rs  subscriber.rs
backend/src/model/: api.rs  hyperliquid.rs  mod.rs
backend/src/service/: hyperliquid.rs  mod.rs
backend/src/ws/: handler.rs  hyperliquid.rs  mod.rs
backend/src/ws/hyperliquid/: book_price.rs  mod.rs  pairs_candle.rs
ccxt-service/: index.mjs  package-lock.json  package.json
frontend/: COMMENTING_PLAN.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/custom-trading-view-chart/: .gitignore  index.html
frontend/public/: manifest.webmanifest  offline.html  service-worker.js
frontend/types/: index.ts  screenshotParsing.ts  tradeLevels.ts
frontend/utils/: hyperliquid.ts  index.ts  isSafari.ts  ocr.ts  pairs.ts  parseTradingViewScreenshot.ts  risk.ts  toHumanReadableTime.ts  usdEquivalents.ts
intelayer-marketing/: .gitignore  README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
intelayer-marketing/public/: robots.txt  sitemap.xml
intelayer-marketing/src/: main.tsx
public/: upDownIcon.tsx
services/conditional-orders/: index.ts
services/execution-engine/: index.ts
services/trading-strategy-engine/: index.ts
src/components/: chatComponent.tsx  handleSelectItems.tsx  navbar.tsx  pnlComponent.tsx  riskManagement.tsx
src/context/: fundingHistoryContext.tsx  index.tsx  orderBookTradesContext.tsx  orderHistoryContext.tsx  pairTokensContext.tsx  positionHistoryContext.tsx  subAccountsContext.tsx  tabledummydata.tsx  tradeHistoryContext.tsx  twapHistoryContext.tsx  webDataContext.tsx
src/pages/: _app.tsx  index.tsx  sub-accounts.tsx
src/styles/: buttons.styles.ts  common.styles.ts  globals.css  navbar.styles.ts  orderbook.styles.ts  pnl.styles.ts  positionsOrdersHistory.styles.ts  riskManager.styles.ts  subAccounts.styles.ts  tokenPairs.styles.ts
types/: index.ts
types/hyperliquid/: index.ts
utils/: hyperliquid.ts  index.ts  nonce.ts  signing.ts  toHumanReadableTime.ts
(+185 files in other folders)
